# SMS

./: CMakeLists.txt  README.md  Resource.qrc  SMS.sql  login.cpp  login.ui  main.cpp  mysql.h  resource.rc
include/: login.h  main_page.h
resource/: Resource.qrc
source/: login.cpp  main.cpp  main_page.cpp  mysql.cpp
ui/: login.ui  main_page.ui
